--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "next": "14.2.4",
     "postcss": "8.4.38",
     "react": "18.3.1",
